2004-01-29  Callum McKenzie  <callum@physics.otago.ac.nz>

	* tetris.cpp: Make sure New Game is disabled while the preferences
	dialog is open (just as the preferences are disabled while the
	game is in play). Patch from Richard Hoelscher, see bug #130654.

2004-01-02  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnometris.schemas.in: And make the new graphics the default.

	* pix/Makefile.am: Added a nice (small) background and block set
	from Graeme Worthy (see bug #130254).

2003-12-22  Callum McKenzie  <callum@physics.otago.ac.nz>

	* tetris.cpp (gameQuit): Check that the games is in progress
	before getting the score. Fixes bug #129711.

2003-12-12  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (INCLUDES): Use GNOME_GAMES_CXXFLAGS rather than
	GNOME_GAMES_CFLAGS.

2003-12-08  Callum McKenzie  <callum@physics.otago.ac.nz>

	* tetris.cpp: Avoid duplicate high scores when starting a new game
	without finishing the old one. Also record the score when we quit
	the game to be consistent. Fixes bug #128735.

2003-11-03  Callum McKenzie  <callum@physics.otago.ac.nz>

	* tetris.cpp: 
	* scoreframe.cpp: Repackage the score widgets to avoid the window
	resizing as the score changes.

	* tetris.cpp: 
	* preview.h:	
	* preview.cpp: Reworked the preview pane code to remove drawing
	glitches and to use GTK+ to do most of the hard work.

2003-10-29  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (INCLUDES): Remove *_DISABLE_DEPRECATED.

2003-10-21  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (install-data-local): Change the way gconf files are
	installed. This should improve things for people building outside
	the source tree. See bug #123192.

2003-10-19  Callum McKenzie  <callum@physics.otago.ac.nz>

	* tetris.h:
	* tetris.cpp: Replaced deprecated gtk+ functions. Also fixed a
	warning generated when the bg loading code struck a name that
	wasn't a .png or a .jpg (like <none>).
